[package]
name = "telestes"
version = "0.1.0"
edition = "2021"
authors = ["The Enarx Project Developers"]
license = "Apache-2.0"
homepage = "https://github.com/enarx/telestes"
repository = "https://github.com/enarx/telestes"
description = "Typed Media (MIME) Types"
readme = "README.md"
keywords = ["mime", "media-types", "media-type", "media-extensions"]
categories = ["parser-implementations", "network-programming", "web-programming", "email", "no-std"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
github = { repository = "enarx/telestes", workflow = "test" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/telestes" }
is-it-maintained-open-issues = { repository = "enarx/telestes" }

[features]
alloc = ["serde/alloc"]
db = []

[dependencies]
serde = { version = "1.0.137", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.12.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
